@@ -32,6 +32,12 @@ Changed
 - The `:greasemonkey-reload` command now shows a list of loaded scripts and has
   a new `--quiet` switch to suppress that message.
 
+Fixed
+~~~~~
+
+- Crash when two Greasemonkey scripts have the same name (usually happening
+  because the same file is in both the data and the config directory).
+
 [[v2.2.3]]
 v2.2.3 (2021-06-01)
 -------------------
